Scrolbar dark mode coloiring fix

--- a/LOCK-IN-ONE.APP/src/styles.css
+++ b/LOCK-IN-ONE.APP/src/styles.css
@@ -186,7 +186,7 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-    background: var(--white);
+    background: dark;
 }
 
 ::-webkit-scrollbar-thumb {
